# ROS2_Smart_Follower

./: .gitignore  CHANGELOG.md  DEPENDENCIES.md  README.md  pyproject.toml  test.md
scripts/: install_dependencies.sh
src/smart_follower_bringup/: CMakeLists.txt  package.xml
src/smart_follower_bringup/config/: perception_params.yaml
src/smart_follower_bringup/launch/: smart_follower.launch.py  smart_follower_only.launch.py
src/smart_follower_control/: CMakeLists.txt  package.xml
src/smart_follower_control/config/: control_params.yaml
src/smart_follower_control/include/smart_follower_control/: arbiter_runtime.hpp  arbiter_state_machine.hpp  constants.hpp  follower_runtime.hpp  lifecycle_utils.hpp  obstacle_runtime.hpp  pid_controller.hpp  ultrasonic_runtime.hpp
src/smart_follower_control/src/: arbiter_node.cpp  arbiter_runtime.cpp  follower_controller_node.cpp  follower_runtime.cpp  keyboard_command_node.cpp  obstacle_avoidance_node.cpp  obstacle_runtime.cpp  ultrasonic_range_node.cpp  ultrasonic_runtime.cpp
src/smart_follower_control/test/: test_arbiter_runtime.cpp  test_arbiter_sm.cpp  test_follower_runtime.cpp  test_obstacle_runtime.cpp
src/smart_follower_msgs/: CMakeLists.txt  package.xml
src/smart_follower_msgs/msg/: FollowCommand.msg  PersonPoseArray.msg  TrackedPerson.msg
src/smart_follower_perception/: CMakeLists.txt  package.xml
src/smart_follower_perception/include/smart_follower_perception/: assignment.hpp  constants.hpp  frame_sync.hpp  geometry_utils.hpp  lock_manager.hpp  perception_diagnostics.hpp  perception_params.hpp  runtime.hpp  tracker.hpp  tracking_utils.hpp
src/smart_follower_perception/scripts/: export_reid_onnx.py  export_yolo_onnx.py  train_reid_resnet50.py  validate_reid_onnx.py
src/smart_follower_perception/src/: frame_sync.cpp  geometry_utils.cpp  lock_manager.cpp  perception_node.cpp  runtime.cpp  tracker.cpp
src/smart_follower_perception/test/: test_assignment.cpp  test_frame_sync.cpp  test_lock_manager.cpp  test_tracker.cpp
